# uicdev

./: .example.env  Gemini.md  Plan.md  extract.py  main.py  pyproject.toml  sample.txt  schema.txt
apps/accounts/: admin.py  models.py  urls.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_created_at_user_updated_at.py
apps/accounts/serializers/: __init__.py  education.py  register.py  user.py  user_certificate.py  user_education.py  user_experience.py
apps/accounts/views/: __init__.py  education.py  sms_send.py  user.py  user_certificate.py  user_education.py  user_experience.py
apps/common/: admin.py  models.py  urls.py  utils.py
apps/common/migrations/: 0001_initial.py  0002_country_city.py
apps/common/serializers/: __init__.py  category.py  city.py  country.py  media.py  tag.py
apps/common/views/: __init__.py  category.py  city.py  country.py  media.py  tag.py
apps/courses/: admin.py  models.py  urls.py
apps/courses/migrations/: 0001_initial.py  0002_enrollment_started_at.py  0003_alter_enrollment_unique_together.py
apps/courses/serializers/: __init__.py  author.py  course.py  enrollment.py  lesson.py  lessonresource.py  module.py
apps/courses/views/: __init__.py  author.py  course.py  enrollment.py  lesson.py  lessonresource.py  module.py
apps/interactions/: admin.py  models.py  urls.py
apps/interactions/migrations/: 0001_initial.py
apps/interactions/serializers/: __init__.py  (+4 more)
apps/notifications/: admin.py  apps.py  models.py  signals.py  translation.py  urls.py
config/: celery.py  settings.py  urls.py
(+14 files in other folders)
